attr. slider buttons bug fixed, changed realtime block behavior on mobile devices

--- a/styles/sass/main.scss
+++ b/styles/sass/main.scss
@@ -312,7 +312,10 @@
     width: 100%;
     padding: 50px 0;
     z-index: 2;
-    background: url(../../img/main/realtime.jpg) center center/cover no-repeat;
+    background: url(../../img/main/realtime.jpg);
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
     background-attachment: fixed;
     margin-bottom: 70px;
 
@@ -1032,6 +1035,8 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        background-size: auto;
+        background-position: 0 0;
 
         &__content {
             width: auto;
@@ -1142,6 +1147,7 @@
         .swiper-button-prev, .swiper-button-next {
             width: 50px;
             height: 50px;
+            z-index: 5;
         }
     }
 
